--- a/modeller/XSeries/X1Series.html
+++ b/modeller/XSeries/X1Series.html
@@ -171,7 +171,69 @@ BMW X1 Series
 		
 	</table>
 	
-	<br><br><br>
+	<br><br>
+	
+	<table border = "0" width = "90%" cellspacing = "30" >
+		
+		<tr>
+			
+			<td colspan = "4" ><a class = "fiyatBaslik">BİLGİ VE TEKLİF ALIN.</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td colspan = "4" ><a class = "fiyatAcıklama">BMW X1, şimdi size özel teklif ve finansman koşulları ile Borusan Otomotiv BMW Yetkili Satıcılarında. Takas indirimi veya kredi avantajlarından yararlanmak* ve detaylı bilgi almak için formumuzu doldurun, biz sizi arayalım.</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "25%" ><a class = "fiyatTabloBaslik">Kredi Tutarı</a></td>
+			<td width = "25%" ><a class = "fiyatTabloBaslik">Vade</a></td>
+			<td width = "25%" ><a class = "fiyatTabloBaslik">Faiz Oranı</a></td>
+			<td width = "25%" ><a class = "fiyatTabloBaslik">Aylık Ödeme Tutarı</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >4.000.000 TL</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >6 Ay</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >%0,00</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >666.667 TL</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td colspan = "4" ><hr size = "1" color = "#aaaaaa" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >4.000.000 TL</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >12 Ay</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >%2,17</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >382.198 TL</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td colspan = "4" ><hr size = "1" color = "#aaaaaa" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >4.000.000 TL</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >24 Ay</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >%4,5</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >275.948 TL</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td colspan = "4" ><hr size = "1" color = "#aaaaaa" ></td>
+			
+		</tr>
+		
+	</table>
 	
 		
 	<!-- InstanceEndEditable --></div>
