index son montaj yapıldı

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<td width = "100%" height = "auto" >
 			<video width = "100%" controls = "none" >
 				
-				<source src = "videolar/M5CS/m5csintro.mp4">
+				<source src = "videolar/M5CS/intro.mp4">
 				
 			</video>
 			</td>
