--- a/GeriDonusum.html
+++ b/GeriDonusum.html
@@ -54,7 +54,7 @@
             	<li><a href="motorlar/motorlar.html#M">M</a></li>
           	</ul>
         </li>
-        <li><a href="#">Aksesuarlar</a></li>
+        <li><a href="aksesuar/aksesuarlar.html">Aksesuarlar</a></li>
         <li><a class="MenuBarItemSubmenu" href="#">Online Hizmetler</a>
           <ul>
             <li><a href="kataloglar.html">Katologlar</a></li>
@@ -215,11 +215,11 @@
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >Geri Dönüşüm</a></td>
+            	<td align = "center" ><a href = "GeriDonusum.html" class = "link" >Geri Dönüşüm</a></td>
                 <td align = "center" ><a href = "kataloglar.html" class = "link" >Kataloglar</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >Gönüllü Geri Çağırma</a></td>
+            	<td align = "center" ><a href = "onlineHizmetler/gonulluGeriCagırma.html" class = "link" >Gönüllü Geri Çağırma</a></td>
                 <td align = "center" ><a href = "" class = "link" >Ayın Özel Teklifleri</a></td>
             </tr>
             
