--- a/elektirikli_modeller/İSeries/İ7.html
+++ b/elektirikli_modeller/İSeries/İ7.html
@@ -199,7 +199,7 @@
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >Geri Dönüşüm</a></td>
+            	<td align = "center" ><a href = "../../GeriDonusum.html" class = "link" >Geri Dönüşüm</a></td>
                 <td align = "center" ><a href = "../../kataloglar.html" class = "link" >Kataloglar</a></td>
             </tr>
             <tr>
