--- a/modeller/XSeries/X3Series.html
+++ b/modeller/XSeries/X3Series.html
@@ -254,7 +254,7 @@ BMW X3 Series
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >Geri Dönüşüm</a></td>
+            	<td align = "center" ><a href = "../../GeriDonusum.html" class = "link" >Geri Dönüşüm</a></td>
                 <td align = "center" ><a href = "../../kataloglar.html" class = "link" >Kataloglar</a></td>
             </tr>
             <tr>
