--- a/motorlar/Adventure/R1250Gs.html
+++ b/motorlar/Adventure/R1250Gs.html
@@ -172,7 +172,7 @@ HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >Geri Dönüşüm</a></td>
+            	<td align = "center" ><a href = "../../GeriDonusum.html" class = "link" >Geri Dönüşüm</a></td>
                 <td align = "center" ><a href = "../../kataloglar.html" class = "link" >Kataloglar</a></td>
             </tr>
             <tr>
