--- a/motorlar/Heritage/R_18.html
+++ b/motorlar/Heritage/R_18.html
@@ -192,7 +192,7 @@ R 18, eksiksiz bir kişiselleştirme için en temel özelliklerine indirgendi.
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >Geri Dönüşüm</a></td>
+            	<td align = "center" ><a href = "../../GeriDonusum.html" class = "link" >Geri Dönüşüm</a></td>
                 <td align = "center" ><a href = "../../kataloglar.html" class = "link" >Kataloglar</a></td>
             </tr>
             <tr>
