morot.css eklendi

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	<table border = "0" width = "100%" cellspacing = "30" >
 		<tr>
 			
-			<td align = "left" ><a class = "altBaslik">Sesi Hisset</a></td>
+			<td align = "left" ><a class = "altBaslik">Gücü Hisset</a></td>
 			
 		</tr>
 		<tr>
