--- a/motorlar/Adventure/R1250Gs.html
+++ b/motorlar/Adventure/R1250Gs.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title> Yeni R 1250 GS </title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -91,16 +92,12 @@
 	</table>
 	
 	<pre>
-		<p class = "icerik" align="center">
-     <b> BMW R 1250 GS ADVENTURE
-HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
-
-		
-	    </p>
+		<p class = "icerik" align="left">
+			<b> BMW R 1250 GS ADVENTURE
+		HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
+ </p>
 		
 	</pre>
-	
-	<br><br>
 	
 	<table width = "75%" cellpadding = "10" align = "center" >
 		
@@ -117,7 +114,7 @@ HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
 	
 		<pre>
 		
-			<p class="#" align="center">
+			<p class="araaciklama" align="center">
 	
 	<b>ÖNE ÇIKAN ÖZELLİKLERİ KEŞFEDİN</b>
 		R 1250 GS Adventure dünyanın her yerinde kendini evinde hisseder. Hiçbir hedef onun için uzak
@@ -145,6 +142,9 @@ HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
 	</table>
 	
 	<br><br>
+	<br><br>
+	<br><br>
+	
 	<table width = "75%" cellpadding = "10" align = "center" >
 		
 		<tr>
