--- a/motorlar/Adventure/R1300Gs.html
+++ b/motorlar/Adventure/R1300Gs.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title> Yeni R 1300 GS </title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -122,7 +123,7 @@
 	
 		<pre>
 		
-			<p class="#" align="center">
+			<p class="araaciklama" align="center">
 	
 	<b>YÜKSEK PERFORMANS AÇISINDAN ÖNE ÇIKANLAR</b>
 		
