--- a/motorlar/Heritage/R18_classic.html
+++ b/motorlar/Heritage/R18_classic.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title> Yeni R 18 CLASSIC </title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -121,9 +122,9 @@
 		<p class = "icerik" align="center" >
 	 
 	<b>KISACA ÖNE ÇIKAN ÖZELLİKLER.</b>
-	Damla şeklindeki yakıt deposu geçmişimizden gelen bir simge ve tıpkı uzatılmış susturucu gibi 
-	R 18 Classic’in tipik ince silüetini vurguluyor. Çift kızaklı çelik çerçeve, her kilometreyi 
-	bir deneyim haline dönüştüren devasa bir şekle sahip motoru sarmalıyor.
+	Damla şeklindeki yakıt deposu geçmişimizden gelen bir simge ve tıpkı uzatılmış susturucu
+	gibi R 18 Classic’in tipik ince silüetini vurguluyor. Çift kızaklı çelik çerçeve, her 
+	kilometreyi bir deneyim haline dönüştüren devasa bir şekle sahip motoru sarmalıyor.
 															
 	    </p>
 		
