--- a/motorlar/Heritage/R_nineT.html
+++ b/motorlar/Heritage/R_nineT.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title> Yeni R Nine T </title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -118,10 +119,11 @@
 	<!-- ozel class acılmalı -->
 		<p class = "icerik" >
 	 
-					<b>“Yüksek kaliteli malzemelere ve el yapımı karaktere sahip BMW R nineT, 
-					kişiselleştirme hayranlarının çoğunun ilk tercihi. ”
-															Dominic Thönnes
-															Ürün Yönetimi</b>
+				<b>“Yüksek kaliteli malzemelere ve el yapımı karaktere 
+				sahip BMW R nineT,kişiselleştirme hayranlarının çoğunun 
+				ilk tercihi. ”</b>
+														Dominic Thönnes
+														Ürün Yönetimi
 
 	    </p>
 		
@@ -140,7 +142,7 @@
 	
 		<pre>
 		
-			<p class="#" align="center">
+			<p class="araaciklama" align="center">
 	
 	<b>Gücün keyfini çıkarın</b>
 		
