--- a/motorlar/Heritage/R_nineT_Urban.html
+++ b/motorlar/Heritage/R_nineT_Urban.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title> Yeni R Nine T Urban </title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -119,13 +120,13 @@
 	<!-- ozel class acılmalı -->
 		<p class = "icerik" >
 	 
-							<b>“Bu özellikleriyle sizi geçmişe götürecek ve 
-							yeni hikayeler yazarken hep yanı başınızda 
-							olacak. Motosikletinize atlayıp sürmeye 
-							başladığınızda, sürüşün hedefe ulaşmaktan daha
-							keyifli olduğunu fark edeceksiniz. ”</b>
-																	     Ulli Sengenberger
-															Renk, grafik ve yüzey tasarımı, R nineT
+				<b>“Bu özellikleriyle sizi geçmişe götürecek ve 
+				yeni hikayeler yazarken hep yanı başınızda 
+				olacak. Motosikletinize atlayıp sürmeye 
+				başladığınızda, sürüşün hedefe ulaşmaktan daha
+				keyifli olduğunu fark edeceksiniz. ”</b>
+														Ulli Sengenberger
+												grafik ve yüzey tasarımı, R nineT
 	    </p>
 		
 	</pre>
@@ -143,7 +144,7 @@
 	
 		<pre>
 		
-			<p class="#" align="center">
+			<p class="araaciklama" align="center">
 	
 			<b>Noktayı koymak istediğinizde</b>
 	
