--- a/motorlar/M/M1000R.html
+++ b/motorlar/M/M1000R.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title> Yeni M 1000 R </title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -121,7 +122,7 @@
 	
 	<pre>
 	<!-- ozel class acılmalı -->
-		<p class = "icerik" align="center" >
+		<p class = "araaciklama" align="center" >
 	 
 	<b>KM hakimiyeti: Motor</b>
 	Superbike motoru gerçek bir roadster için mükemmel hale getirildi: RR'dan alınan dört silindirli motor
