--- a/motorlar/Sport/S1000RR.html
+++ b/motorlar/Sport/S1000RR.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title>Yeni S 1000 RR</title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -88,16 +89,10 @@
 		</tr>
 	</table>
 	
-	<pre>
-		<p class = "icerik" >
-	 
+	<pre><p class = "icerik">
 			<b>BMW S 1000 RR
 			EN İYİLERİN SUPERBİKE’I</b>
-				
-
-	    </p>
-		
-	</pre>
+		</p></pre>
 	
 	<table width = "75%" cellpadding = "10" align = "center" >
 		
@@ -147,7 +142,7 @@
 	<br><br>
 	
 	<pre>
-		<p class = "icerik" >
+		<p class = "araaciklama" >
 	 
 						<b>Tutku kalbin attığı yerdedir ve o kalp heyecanla atıyor!</b>
 						Zincirlerinden boşalan tutku: Yarış pistlerinden edindiğimiz tüm deneyimi bir kez daha RR'ın 
@@ -202,7 +197,7 @@
 	<br><br>
 	
 	<pre>
-		<p class = "icerik" >
+		<p class = "araaciklama" >
 	 
 						<b>Sportif karakter baskın genlerle bir sonraki nesle geçiyor</b>
 						Süper sportif ve ödün vermez şekilde kompakt. RR'ın bu temel tasarım değerlerini koruduk.	
