--- a/elektirikli_modeller/İSeries/İ5.html
+++ b/elektirikli_modeller/İSeries/İ5.html
@@ -4,7 +4,7 @@
 <link rel="icon" href="../../resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
-<title>
+<title> BMW İ5
 </title>
 <link href="../../css/araba.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
