--- a/motorlar/M/M1000RR.html
+++ b/motorlar/M/M1000RR.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
 <title> Yeni M 1000 RR </title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -88,17 +89,12 @@
 		</tr>
 	</table>
 	
-	<br><br>
-	
 	<pre>
 		<p class = "icerik" >
 	 
-							<b>BMW M 1000 RR
-							KENDİNDEN ÖNCEKİ YARIŞÇILARA BENZEMEZ </b>
-				
-
-	    </p>
-		
+			<b>BMW M 1000 RR
+			KENDİNDEN ÖNCEKİ YARIŞÇILARA BENZEMEZ </b>
+		</p>	
 	</pre>
 	
 	<table width = "75%" cellpadding = "10" align = "center" >
