--- a/motorlar/Sport/F900R.html
+++ b/motorlar/Sport/F900R.html
@@ -4,8 +4,8 @@
 <link rel="icon" href="../../resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
-<title>
-</title>
+<title> BMW F900 R </title>
+<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -90,17 +90,12 @@
 		</tr>
 	</table>
 	
-	<br><br>
-	
 	<pre>
 		<p class = "icerik" >
 	 
-						<b>F 900 XR
-						DAHA YÜKSEĞE, DAHA HIZLI, DAHA İLERİYE.</b>
-				
-
+			<b>F 900 XR
+			DAHA YÜKSEĞE, DAHA HIZLI, DAHA İLERİYE.</b>
 	    </p>
-		
 	</pre>
 	
 	<table width = "75%" cellpadding = "10" align = "center" >
@@ -113,6 +108,7 @@
 		</tr>
 		
 	</table>
+	<br><br>
 	<br><br>
 	
 		<table width = "75%" cellpadding = "10" align = "center" >
