index tasarım değişikliği ve aksesuarlar başlangıç

--- a/index.html
+++ b/index.html
@@ -66,6 +66,31 @@
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
 	
+	<div class = "videoAnaDiv" >
+		
+		<div class = "videoDiv" >
+			
+			<video width = "100%" autoplay muted >
+				
+				<source src = "videolar/M5CS/m5csintro.mp4" type = "video/mp4" >
+				
+			</video>
+			
+		</div>
+		<div class = "videoYaziDiv" >
+			
+			<h1> THE <br> M5 Cs </h1>
+			<p>Konfor ve Hız Bİr Arada</p>
+			<h3> M Serisinin En İyisi<h3>
+			
+		</div>
+		
+	</div>
+	
+	<!-- Gereksik yüksek BUG Var -->
+	
+	<!--
+	
 	<table border = "0" width = "100%" cellspacing = "10" >
 		
 		<tr>
@@ -91,6 +116,9 @@
 		</tr>
 		
 	</table>
+	
+	-->
+	
 	<table align = "left" width = "85%" >
 		<tr>
 			<td>
