--- a/modeller/5Series/BMW5SeriesSedan.html
+++ b/modeller/5Series/BMW5SeriesSedan.html
@@ -53,7 +53,7 @@
             	<li><a href="../../motorlar/motorlar.html#M">M</a></li>
           	</ul>
         </li>
-        <li><a href="aksesuar/aksesuarlar.html">Aksesuarlar</a></li>
+        <li><a href="../../aksesuar/aksesuarlar.html">Aksesuarlar</a></li>
         <li><a class="MenuBarItemSubmenu" href="#">Online Hizmetler</a>
           <ul>
             <li><a href="../../kataloglar.html">Katologlar</a></li>
