--- a/motorlar/Heritage/R_18.html
+++ b/motorlar/Heritage/R_18.html
@@ -4,8 +4,7 @@
 <link rel="icon" href="../../resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
-<title> BMW F900 R </title>
-<link href="../../css/motor.css" rel="stylesheet" type = "text/css" />
+<title> Yeni R 18 </title>
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -66,119 +65,112 @@
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
 	
-	
 	<table width = "98%" align = "center" >
 		<tr>
 			
-			<td colspan = "5" ><img src = "../../resimler/motorlar/sport/F900R/as.jpg" width = "100%" ></td>
+			<td colspan = "5" ><img src = "../../resimler/motorlar/heritage/R_18/as.jpg" width = "100%" ></td>
 			
 		</tr>
 		<tr>
 			
 			<td width = "160" ><a class = "resimBaslik">Yakıt Tipi</a></td>
 			<td width = "110" ><a class = "resimBaslik">Güç</a></td>
-			<td width = "110" ><a class = "resimBaslik">Azami Hız</a></td>
+			<td width = "110" ><a class = "resimBaslik">Cc</a></td>
 			<td></td>
 			
 		</tr>
 		<tr>
 			
 			<td><a class = "resimAciklama">Benzin</a></td>
-			<td><a class = "resimAciklama">210 bg</a></td>
-			<td><a class = "resimAciklama">314 km/sa</a></td>
+			<td><a class = "resimAciklama">91 bg</a></td>
+			<td><a class = "resimAciklama">1.800 cc</a></td>
 			
 		</tr>
 	</table>
 	
 	<pre>
-		<p class = "icerik" >
+		<p class = "icerik" align="center">
 	 
-			<b>F 900 XR
-			DAHA YÜKSEĞE, DAHA HIZLI, DAHA İLERİYE.</b>
+	 <b>İlk bakışta bir cruiser motosiklet.</b>
+	
+Silueti uzun ve alçak olan bu yeni modelin çift motor beşikli şasisi etkileyici duruşu öne çıkaran 
+güçlü, heykel gibi şekillendirilmiş motoru sarmalıyor. Sürücüye birçok özel donanım seçeneği sunan 
+R 18, eksiksiz bir kişiselleştirme için en temel özelliklerine indirgendi.
+
+		
 	    </p>
+		
 	</pre>
 	
+	<br><br>
+	
 	<table width = "75%" cellpadding = "10" align = "center" >
 		
 		<tr>
 			
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik">XR atletik özellikler ve uzun mesafe performansının tavizsiz bir kombinasyonunu ifade eder. Her virajda daha fazla adrenalinle F 900 XR’ı sürerken hiç durmadan virajların peşinden koşun. Yalnızca heyecan verici tasarımı bile saf bir performansı vadeder. Dik, rahat oturma konumu ile rüzgar ve kötü hava koşullarına karşı koruma sayesinde sürüşün ne zaman biteceğine karar veren siz olun.<br>Eksiksiz donanım sayesinde spor aktiviteler, yolculuklar veya şehirde dolaşmak için hazırsınız. F 900 XR size ve sportif duruşunuza en uygun motosiklettir. #MeydanOkumaktanAslaVazgeçme </a></td>
-			<td width = "45%" ><img src = "../../resimler/motorlar/sport/F900R/3.jpg" width = "100%" ></td>
-			
-		</tr>
-		
-	</table>
-	<br><br>
-	<br><br>
-	
-		<table width = "75%" cellpadding = "10" align = "center" >
-		
-		<tr>
-			
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Net gövde tasarımıyla tartışmasız bir XR.</b><br><br>F 900 XR’ın motivasyonu ilk bakışta fark edilir. Yeni geliştirilen çarpıcı LED lamba en iyi bildiğiniz duyguyu, yani F 900 XR’ın hakim doğasını öne çıkarır. Kaplamaların daha da artırdığı bu dinamik heyecan, keskin kenarlarla belirginleşen saldırgan tasarımla desteklenir. İnce ve kısa görünen kuyruk kısmı, bu uzun mesafe koşucusunun atletik enerjisini harekete geçirir.</a></td>			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Kişisel Cruiser modelinizi tasarlayın</b><br>Option 719, R 18'e kişisel dokunuşunuzu katabileceğiniz birçok fırsat sunuyor. Option 719 İki Renkli Icon döküm jantlar, motosikletin üst segment görünümünü tamamlıyor. Siyah renkli suni deriden üretilen Option 719 sele, elmas şeklindeki kabartmaları ve dikişlerinin yanı sıra işlemeli BMW armasıyla tüm yolculukları daha da konforlu hale getiriyor.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_18/1.jpg" width = "100%" ></td>
 			
 		</tr>
 		
 	</table>
 	
-	<br>
+	<br><br>
 	
-	<img width = "95%" src = "../../resimler/motorlar/sport/F900R/yeni.jpg">
+		<pre>
+		
+			<p class="#" align="center">
 	
-	<br><br><br>
+	<b>YÜKSEK PERFORMANS AÇISINDAN ÖNE ÇIKANLAR</b>
+		
+	Önünüzde: Yeni hedefiniz; ikonik LED matrix farla çok iyi şekilde aydınlatılmış durumda. Arkanızda:
+	Kilometre taşları. Mükemmel kişiselleştirme potansiyeliyle kısa Monokok arka bölüm. Hiç şüphe yok: 
+	Olağanüstü Adventure motosikletleri ürün yelpazesinin en üst modelini kullanıyorsunuz. Kapsamlı 
+	standart donanımı keşfedin.	
+			
+			</p>
+		</pre>	
+		
 
+	<!--Slider-->
+	
 	
 	<table width = "75%" cellpadding = "10" align = "center" >
 		
 		<tr>
-		
-		
-			<td width = "45%" ><img src = "../../resimler/motorlar/sport/F900R/xr.jpg" width = "100%" ></td>
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Dik ve rahat.</b><br><br>F 900 XR’ın ergonomik özellikleriyle günün sonunda kilometre sayacı yeteri kadar yükselirken tüm vücudunuz da enerjiyle dolacak. Tamamen sportif uzun mesafe performans için tasarlanan modelin koruyucu ön kaplamaları sayesinde bir virajdan diğerine heyecanla sürüşe devam edin. 775 ile 870 mm arasında değişen sele yüksekliği, tam olarak ayarlanabilen kol ve esnek iki kademeli ön camın koyduğu kural basit: Maksimum düzeyde değişkenlik. İdeal yükseklikteki ayak dayaması ve sele, arkanızdaki yolcunun da her kilometrede yaşanan tutkuya ortak olmasını sağlar.</a></td>
 			
-		</tr>
-		
-	</table>
-	<br><br>
-	
-	
-	<br><br><br>
-	
-	<table width = "75%" cellpadding = "10" align = "center" >
-		
-		<tr>
-		
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Dinlenirken nabzınız: 92 Nm.</b><br>Gözlerinizin önündeki yarış çizgisi ve ufka diktiğiniz bakışlarınızla her virajı sakin ve kendinizden emin bir şekilde arkanızda bırakın. Durmadan, bıkmadan. #MeydanOkumaktanAslaVazgeçme. Düz yarış pistlerine karşı bu bitmez tükenmez arzuya, her zaman daha ileri gitme içgüdüsüne sahipseniz doğru yol arkadaşlarıyla tanışın: F 900 XR’ın yüksek torka sahip sıralı iki silindirli motoru 4.500 ile 8.500 dev/dak arasında 92 Nm tork üretir. Opsiyonel Dynamic ESA, en uygun süspansiyon konforuyla son derece dengeli bir sürüş sunar. Bu güçle ileri gitmeyi arzulayanlar, diğer herkesi geride bırakır.</a></td>
-			<td width = "45%" ><img src = "../../resimler/motorlar/sport/F900R/1.jpg" width = "100%" ></td>
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik">Kararlı bir şekilde 1923’ten beri boxer motora güveniyoruz. R 18’in 1802 cc, iki silindirli boxer motoru şimdiye dek ürettiğimiz en yüksek hacme sahip boxer motor. 3000 dev/dak’da 158 Nm maksimum tork sunuyor. 2000’den 4000 dev/dak’ya kadar her zaman 150 Nm’nin üzerinde tork sunuyor. Bu bir boxer motorun tipik çalışma karakteriyle son derece istikrarlı, yüksek bir tork sunulduğu anlamına geliyor. Bu ‘Big Boxer’, 4750 dev/dak’da 91 bg (67 kW) güç üretiyor. Böylelikle yolda saf bir heyecan için geleneksel özelliklerle modern teknoloji bir araya geliyor. </a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R_18/10.jpg" width = "100%" ></td>
 			
 		</tr>
 		
 	</table>
 	
+	
 	<br><br>
-	<!--- slider --->
-    <br><br>
 	
 	
 	<table width = "75%" cellpadding = "10" align = "center" >
 		
 		<tr>
-		
-		
-			<td width = "45%" ><img src = "../../resimler/motorlar/sport/F900R/12.jpg" width = "100%" ></td>
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Kelimenin tam anlamıyla vizyoner.</b><br><br>Söz konusu aydınlatmaysa F 900 XR, standartları belirler. Model, orta seviye segmentte ilk kez sunulan adaptif viraj ışıklarına sahiptir. Yeni geliştirilen çarpıcı LED farlara yerleştirilen bu özellik, 7° açıda virajlarda mükemmel aydınlatma sağlar; gece veya ışığın zayıf olduğu durumlarda sürüş sırasında bariz bir avantajdır.</a></td>
+			
+			<td width = "30%" ><img src = "../../resimler/motorlar/heritage/R_18/alt1.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/motorlar/heritage/R_18/alt2.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/motorlar/heritage/R_18/alt3.jpg" width = "100%" ></td>
 			
 		</tr>
-		
-	</table>
-	<br><br>
-	
-	<table width = "75%" cellpadding = "10" align = "center" >
-		
 		<tr>
-		
-			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Sistematik güvenlik.</b><br>Modeldeki birçok yenilik, keyifli ve rahat bir sürüşü mümkün kılar. Dinamik Fren Kontrolü (DBC) ve Motor Freni Kontrolü (EBC) acil durum freni sırasında ve gazın aniden kesilmesi ya da ani vites düşürme anında daha fazla güvenlik sağlar.</a></td>
-			<td width = "45%" ><img src = "../../resimler/motorlar/sport/F900R/5.jpg" width = "100%" ></td>
+			
+			<td align = "center" ><a class = "aciklamaBaslik"> BMW R 18 100 Years  </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik">  Değerli bir miras. Saf tutku. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Heritage koleksiyonu. Stiliniz önemlidir. </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">100. yıl dönümü için sınırlı sayıda üretielen özel modelimiz </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">İster tek başına ister bir grupta olun,sahici ve rahat bir deneyim yaşayacaksınız. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Hassas,boyutları küçültülmüş,klasik.En sevdiğiniz parçalar.</a></td>
 			
 		</tr>
 		
