footer link düzenleme

--- a/elektirikli_modeller/İXSeries/İX2.html
+++ b/elektirikli_modeller/İXSeries/İX2.html
@@ -175,7 +175,7 @@
             </tr>
             <tr>
             	<td align = "center" ><a href = "../../iletişim.html" class = "link" >İletişim</a></td>
-                <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
+                <td align = "center" ><a href = "../../modeller/modeller.html" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
             	<td align = "center" ><a href = "../../GeriDonusum.html" class = "link" >Geri Dönüşüm</a></td>
@@ -183,7 +183,7 @@
             </tr>
             <tr>
             	<td align = "center" ><a href = "../../onlineHizmetler/gonulluGeriCagırma.html" class = "link" >Gönüllü Geri Çağırma</a></td>
-                <td align = "center" ><a href = "" class = "link" >Ayın Özel Teklifleri</a></td>
+                <td align = "center" ><a href = "../../onlineHizmetler/fiyatListesi.html" class = "link" >Fiyat listesi</a></td>
             </tr>
             <tr>
             	
