--- a/modeller/4Series/4Cabrio.html
+++ b/modeller/4Series/4Cabrio.html
@@ -306,7 +306,7 @@
             </tr>
             <tr>
             	<td align = "center" ><a href = "../../iletişim.html" class = "link" >İletişim</a></td>
-                <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
+                <td align = "center" ><a href = "../modeller.html" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
             	<td align = "center" ><a href = "../../GeriDonusum.html" class = "link" >Geri Dönüşüm</a></td>
@@ -314,7 +314,7 @@
             </tr>
             <tr>
             	<td align = "center" ><a href = "../../onlineHizmetler/gonulluGeriCagırma.html" class = "link" >Gönüllü Geri Çağırma</a></td>
-                <td align = "center" ><a href = "" class = "link" >Ayın Özel Teklifleri</a></td>
+                <td align = "center" ><a href = "../../onlineHizmetler/fiyatListesi.html" class = "link" >Fiyat listesi</a></td>
             </tr>
             <tr>
             	
